# materiaux-magnetiques

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-windows.sh  build.sh  download-raylib-windows.sh  main.cpp  mingw-toolchain.cmake  windows-toolchain.cmake
.cache/clangd/index/: FA6FreeSolidFontData.h.E682E76CC64854B2.idx  IconsFontAwesome6.h.BCE6A21F47AD4FCE.idx  imconfig.h.2D4E7B5C69C207FB.idx  imgui.cpp.78B60B2095EB2D46.idx  imgui.h.3D4177AE5D9B7969.idx  imgui_demo.cpp.718120800FE1713F.idx  imgui_draw.cpp.C50DFA5D5CFA2225.idx  imgui_impl_raylib.h.E0549B784A9BB864.idx  imgui_internal.h.64994FC7C7B632E2.idx  imgui_tables.cpp.CBBC39B5CD9E0BDD.idx  imgui_widgets.cpp.B8BB1B71EFB48EEA.idx  imstb_rectpack.h.8D78F000F009528F.idx  imstb_textedit.h.ACD48BBF1EA78AF2.idx  imstb_truetype.h.F88D213A0BF27F17.idx  main.cpp.0211AEA31FA4D6DA.idx  rlImGui.cpp.FD067FDFF43DD113.idx  rlImGui.h.2D7D43F06B4BDAB7.idx
.github/workflows/: build.yml
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  users.txt
build-windows/: CMakeCache.txt  Makefile  cmake_install.cmake  users.txt
include/: auth.h  imgui_style.h  rlights.h  simulation.h  simulation_ui.h
src/: auth.cpp  main.cpp  simulation.cpp  simulation_ui.cpp
